# twin-ai

./: pyproject.toml
src/app/: Dockerfile  requirements.txt
src/embedding_pipleline/: pipeline.py
src/embedding_pipleline/configs/: embedding_generation_local.yaml  embedding_generation_qdrant._cloudyaml
src/embedding_pipleline/steps/: __init__.py  embedding_generation.py  hf_datasets.py
src/vector_twin/: docker-compose.yml  models.py  settings.py
src/vector_twin/qdrant/: __init__.py  client.py  utils.py
src/vector_twin/scripts/: create_zenml_secrets.py  delete_zenml_secrets.py
